--- a/views/home.twig
+++ b/views/home.twig
@@ -1,6 +1,9 @@
 {% extends "base.twig" %}
 
 {% block content %}
+
+	<h1>The home page</h1>
+	
 	{% for post in posts %}
 		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
 	{% endfor %}
