--- a/views/index.twig
+++ b/views/index.twig
@@ -1,6 +1,8 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	<h1>Index page</h1>	
+
 	{% for post in posts %}
 		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
 	{% endfor %}
