--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<h1> Page</h1>
+	<h1>Page Raffle</h1>
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
