--- a/views/single.twig
+++ b/views/single.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+	<h1> Detail page</h1>
+	
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
