--- a/views/base.twig
+++ b/views/base.twig
@@ -4,12 +4,12 @@
             {% block header %}
             <div class="wrapper">
 
-                <h1 class="hdr-logo" role="banner">
+               <!--  <h1 class="hdr-logo" role="banner">
                     <a class="ink-logo-text" href="/" title="Timber" rel="home">Timber</a>
-                </h1>
+                </h1> -->
 
                 <nav id="access" class="ink-navigation" role="navigation">
-                    {{wp_nav_menu}}
+                   <!--  {{wp_nav_menu}} -->
                 </nav><!-- #access -->
                 
             </div>
@@ -32,8 +32,8 @@
         </section>
 
         <div id="footer">
-            {% include 'footer.twig' %}
-        </div>
+<!--             {% include 'footer.twig' %}
+ -->        </div>
         {{ wp_footer }}
     </body>
 </html>
