--- a/src/partials/_base.scss
+++ b/src/partials/_base.scss
@@ -28,7 +28,7 @@
 // http://compass-style.org/reference/compass/typography/lists/
 @import "compass/typography/lists";
 
-// Makes all Link mixing available
+// Makes all Link mixins available
 // http://compass-style.org/reference/compass/typography/links/unstyled_link/
 @import "compass/typography/links";
 
