--- a/src/partials/_reset.scss
+++ b/src/partials/_reset.scss
@@ -211,3 +211,17 @@ button {  width: auto; overflow: visible; }
 	clip: rect(1px 1px 1px 1px);
 	clip: rect(1px, 1px, 1px, 1px);
 }
+
+
+//Resets for search
+input[type="search"] {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
