--- a/views/page-about.twig
+++ b/views/page-about.twig
@@ -3,6 +3,14 @@
 {% block content %}
 
 	<h1> Page</h1>
+
+	<!-- this loops gets the team members -->
+	{% for person in post.team %}
+		{{person.name}}
+		<img src="{{person.image.url}}"/>
+		{{person.bio}}
+	{% endfor %}
+
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
