--- a/src/style.scss
+++ b/src/style.scss
@@ -41,6 +41,19 @@ strong	{	font-weight: bold;	}
 em   	{	font-style: italic;	}
 
 
+.btn-donate {
+	margin: 0 auto;
+	text-align: center;
+	max-width: 175px;
+	width: 100%;
+	padding: 20px;
+	@include box-shadow(inset #87a722 0px 0px 30px);	
+}
+
+.page-mod {
+	padding: 50px;
+}
+
 /* ============================================= */
 
 /*	nav     						   			 */ 
@@ -61,13 +74,76 @@ em   	{	font-style: italic;	}
 
 .nav-li-mod {
 	float: right;
+	padding-top: 30px;
 } 
 
 .nav-li-item {
 	display: inline;
 	background-color: #000;
 	color: #fff;
+	padding: 2px 6px;
+	font: 600 15px/120% $freight-sans;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	margin-right: 2px;
+
+	&:last-child {
+		margin-right: 0px;
+	}
+
+	&:hover {
+		color: $bfc-green;
+	}
 }
+
+
+
+/* ============================================= */
+
+/*	Page-Intro     						   		 */ 
+
+/* ============================================= */
+	
+	.page-intro {
+		padding: 0% 0%;
+		background: url(/wp-content/themes/spokes/images/home-hero-1.jpg) no-repeat center center;
+		@include background-size(cover);
+		z-index:3000000;
+		max-height: 786px;
+		height: 786px;	
+		margin: 0 auto;
+		text-align: center;		
+	}
+
+	.intro-h1 {
+		max-width: 1080px;
+		width: 100%;
+		text-indent:-3000px;
+		background: url(/wp-content/themes/spokes/images/home-intro-txt.png) no-repeat 50% 100%;
+		margin: 0 auto;
+		text-align: center;	
+		height: 110px;
+		padding-top: 400px;
+		background-size: 1080px;
+		margin-bottom: 25px;
+	}
+
+	.intro-h2 {
+		font: 600 29px/120% $freight-sans;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		color: #fff;	
+		margin: 0 auto;
+		text-align: center;	
+		margin-bottom: 65px;
+	}
+
+	.sub-intro-txt {
+		font: 600 32px/120% $freight-sans;
+		max-width: 780px;
+		width: 100%;
+	}
+
 
 
 /* --------------------------------------------- */
