--- a/views/home.twig
+++ b/views/home.twig
@@ -14,11 +14,24 @@
 					<li class="nav-li-item"><a href="#">Raffle</a></li>
 					<li class="nav-li-item"><a href="#">About</a></li>
 					<li class="nav-li-item"><a href="#">History</a></li>
-					<li class="nav-li-item"><a href="#">Blog</a></li>
-					<li class="nav-li-item"><a href="#">Store</a></li>					
+					<li class="nav-li-item"><a href="#">store</a></li>
+					<li class="nav-li-item"><a href="#">Blog</a></li>					
 				</ul>	
 			</div><!-- /nav-link-mod -->	
 		</section><!-- /nav -->	
+
+		<section class="page-intro">
+			<h1 class="intro-h1">Bikes Fight Cancer</h1>
+			<h2 class="intro-h2">Our Goal: Raise $26,000 for the Pan-Mass Challenge</h2>
+			<a class="btn btn-donate">Donate Today</a>
+		</section><!-- /page-intro -->	
+
+		<section class="page-sub-intro">
+			<div class="page-mod">
+				<h3 class="sub-intro-txt">We love bikes. We hate cancer.
+				Bikes Fight Cancer is a tight-knit team of knuckleheads that ride bikes and are committed to raising money for life-saving cancer research and treatment.</h3>
+			</div><!-- /page-mod -->	
+		</section><!-- /page-sub-intro -->	
 
 		<footer>
 		</footer>	
