--- a/src/project/_buttons.scss
+++ b/src/project/_buttons.scss
@@ -129,17 +129,17 @@
 	
 @mixin btn-size-small {
 	font-size: 11px;
-	padding: 7px 8px 8px;		
+	// padding: 7px 8px 8px;		
 }
 
 @mixin btn-size-med {
 	font-size: 13px;
-	padding: 7px 8px 8px;		
+	// padding: 7px 8px 8px;		
 }
 
 @mixin btn-size-large {
 	font-size: 13px;
-	padding: 10px 10px 11px;		
+	// padding: 10px 10px 11px;		
 }
 
 
