--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ input[type="search"]::-webkit-search-results-decoration {
   *zoom: 1;
   overflow: hidden;
 }
-/* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .dropdown:after {
   content: "";
   display: table;
@@ -382,7 +382,7 @@ input[type="search"]::-webkit-search-results-decoration {
   margin: 0 0 18px;
   *zoom: 1;
 }
-/* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .tabs:after, .pills:after {
   content: "";
   display: table;
@@ -555,7 +555,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-lt-s {
   font-size: 11px;
-  padding: 7px 8px 8px;
   color: #fff;
   background-color: #ccc;
 }
@@ -573,7 +572,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-dk-s {
   font-size: 11px;
-  padding: 7px 8px 8px;
   color: #fff;
   background-color: #0064cd;
 }
@@ -581,7 +579,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-alt-s, .btn-s {
   font-size: 11px;
-  padding: 7px 8px 8px;
   color: #fff;
   text-decoration: none;
   background-color: #a8cf2d;
@@ -601,7 +598,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-lt-m, .btn-lt {
   font-size: 13px;
-  padding: 7px 8px 8px;
   color: #fff;
   background-color: #ccc;
 }
@@ -619,7 +615,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-dk-m, .btn-dk {
   font-size: 13px;
-  padding: 7px 8px 8px;
   color: #fff;
   background-color: #0064cd;
 }
@@ -627,7 +622,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-alt-m, .btn, .btn-m, .btn-alt {
   font-size: 13px;
-  padding: 7px 8px 8px;
   color: #fff;
   text-decoration: none;
   background-color: #a8cf2d;
@@ -647,7 +641,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-lt-l {
   font-size: 13px;
-  padding: 10px 10px 11px;
   color: #fff;
   background-color: #ccc;
 }
@@ -665,7 +658,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-dk-l {
   font-size: 13px;
-  padding: 10px 10px 11px;
   color: #fff;
   background-color: #0064cd;
 }
@@ -673,7 +665,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* line 196, src/project/_buttons.scss */
 .btn-alt-l, .btn-l {
   font-size: 13px;
-  padding: 10px 10px 11px;
   color: #fff;
   text-decoration: none;
   background-color: #a8cf2d;
@@ -721,12 +712,44 @@ em {
   max-width: 175px;
   width: 100%;
   padding: 20px;
+  position: relative;
   -webkit-box-shadow: inset #87a722 0px 0px 30px;
   -moz-box-shadow: inset #87a722 0px 0px 30px;
   box-shadow: inset #87a722 0px 0px 30px;
 }
 
-/* line 53, src/style.scss */
+/* line 54, src/style.scss */
+.btn-donate:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 0%;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.4);
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  transition: none;
+}
+
+/* line 67, src/style.scss */
+.btn-donate:hover:after {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+/* line 74, src/style.scss */
 .page-mod {
   padding: 50px;
 }
@@ -734,7 +757,7 @@ em {
 /* ============================================= */
 /*	nav     						   			 */
 /* ============================================= */
-/* line 63, src/style.scss */
+/* line 84, src/style.scss */
 .nav-mod {
   position: fixed;
   top: 0px;
@@ -742,19 +765,19 @@ em {
   padding: 0px 35px;
 }
 
-/* line 70, src/style.scss */
+/* line 91, src/style.scss */
 .nav-logo {
   max-width: 80px;
   width: 100%;
 }
 
-/* line 75, src/style.scss */
+/* line 96, src/style.scss */
 .nav-li-mod {
   float: right;
   padding-top: 30px;
 }
 
-/* line 80, src/style.scss */
+/* line 101, src/style.scss */
 .nav-li-item {
   display: inline;
   background-color: #000;
@@ -765,11 +788,11 @@ em {
   letter-spacing: 1px;
   margin-right: 2px;
 }
-/* line 90, src/style.scss */
+/* line 111, src/style.scss */
 .nav-li-item:last-child {
   margin-right: 0px;
 }
-/* line 94, src/style.scss */
+/* line 115, src/style.scss */
 .nav-li-item:hover {
   color: #bada55;
 }
@@ -777,22 +800,18 @@ em {
 /* ============================================= */
 /*	Page-Intro     						   		 */
 /* ============================================= */
-/* line 107, src/style.scss */
+/* line 128, src/style.scss */
 .page-intro {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/home-hero-1.jpg) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  z-index: 3000000;
+  background-size: 120%;
   max-height: 786px;
   height: 786px;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 118, src/style.scss */
+/* line 138, src/style.scss */
 .intro-h1 {
   max-width: 1080px;
   width: 100%;
@@ -806,7 +825,7 @@ em {
   margin-bottom: 25px;
 }
 
-/* line 131, src/style.scss */
+/* line 151, src/style.scss */
 .intro-h2 {
   font: 600 29px/120% "freight-sans-pro";
   text-transform: uppercase;
@@ -817,7 +836,7 @@ em {
   margin-bottom: 65px;
 }
 
-/* line 141, src/style.scss */
+/* line 161, src/style.scss */
 .sub-intro-txt {
   font: 600 32px/120% "freight-sans-pro";
   max-width: 780px;
