switching up the footer include

--- a/views/base.twig
+++ b/views/base.twig
@@ -16,9 +16,8 @@
             {% endif %}
         </section>
 
-        <div id="footer">
-<!--             {% include 'footer.twig' %}
- -->        </div>
+        {% include 'footer.twig' %}      
+
         {{ wp_footer }}
     </body>
 </html>
